<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_name">Download progress</string>

    <string name="button_name">Click me</string>
    <string name="button_finished">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="glide_file">Glide - Image Loading Library by BumpTech </string>
    <string name="load_app_file">LoadApp Current Repository by Udacity</string>
    <string name="retrofit_file">Retrofit - Type-safe Http client for Android and Java by Square, inc</string>
</resources>
